# bami-chan

./: .gitignore  Cargo.toml  Dockerfile  devenv.nix  docker-compose.yml  flake.nix  justfile  maskfile.md  shell.nix
src/: main.rs  ping.rs  process.rs
src/music/: events.rs  mod.rs
src/music/commands/: mod.rs  pause.rs  play.rs  resume.rs  skip.rs  stop.rs
src/utils/: mod.rs
