[package]
name = "bami"
description = "Bami-chan discord bot."
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
dotenv = "0.15"
regex = "1.12"
reqwest = "0.12"
songbird = { git = "https://github.com/serenity-rs/songbird", branch = "next", features = [
  "gateway",
  "twilight",
  "rustls",
  "driver",
  "builtin-queue",
] }
tokio = { version = "1.50", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.23", features = [
  "std",
  "fmt",
  "ansi",
], default-features = false }
twilight-cache-inmemory = "0.16"
twilight-gateway = "0.16"
twilight-http = "0.16"
twilight-interactions = "0.16"
twilight-mention = "0.16"
twilight-model = "0.16"
twilight-standby = "0.16"
twilight-util = { version = "0.16", features = ["builder", "full"] }

[dependencies.symphonia]
version = "0.5"
features = ["all"]
